# C-Programs

./: TB_ls_cd.c  environ.c  fork1.c  fork2.c  fork3.c  fork4_wait.c  fork5_zombie.c  forkloop.c  getword.c  twopipes_3b.c  twopipes_4.c  twopipes_4b.c  twopipes_4c.c
Four/: CMakeLists.txt  getword.c  p2.c  p2.h  rmall.sh  runall.sh
Four/Data1/: input4  input5  test
Four/Data2/: jabbersleepy
Four/Data4/: input00  input1  input10  input11  input13  input14  input16  input18  input2  input21  input33A  input6  input7  input8  input9  input99
Four/Data4/dir/: h
Four/Output/: my.tempOutput
